[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/Schulhaus.png" type="Texture" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 640, 0, 0, 0, 0, 0, 640, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]
scale = Vector2( 0.5, 0.5 )

[node name="StarPosition" type="Position2D" parent="."]
position = Vector2( 240, 400 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobPath" type="Path2D" parent="."]
editor/display_folded = true
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 240, 320 )
z_index = -1
texture = ExtResource( 5 )
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
